--- a/cover.example.yml
+++ b/cover.example.yml
@@ -95,7 +95,7 @@ jobs:
           key: ${{ runner.os }}-cover-goverdiff-sha1-${{ steps.goverdiff-main.outputs.sha1 }}
       - name: Install goverdiff
         if: steps.cache-goverdiff.outputs.cache-hit != 'true'
-        run: go install github.com/flipgroup/goverdiff@main
+        run: go install github.com/alexliesenfeld/goverdiff@main
       - name: Run goverdiff
         if: github.event_name == 'pull_request'
         env:
